# shell-console-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  readinput.cpp  readinput.h  shell_console_base.h
shell_console_lib/: CMakeLists.txt  readinput_rl.cpp  readinput_utilities.cpp  shell_console_base.cpp
